# ifsc-pi3-eletronic-load

./: .gitignore  README.md  requirements.md
docs/: analog_pid.md  assembly.md  final_assembly.md  hardware_design.md  load_hardware_assembly.md  montagem_placa_carga.md  panel_hardware_assembly.md  protocol.md
firmware/hmi/: CMakeLists.txt  sdkconfig
firmware/hmi/main/: CMakeLists.txt  common.h  idf_component.yml  main.c  utils.h
firmware/hmi/main/bus/: i2c.c  i2c.h  spi.c  spi.h  uart.c  uart.h
firmware/hmi/main/control/: load.c  load.h  menu.c  menu.h  stream.c  stream.h
firmware/hmi/main/peripherals/: buttons.c  buttons.h  encoder.c  encoder.h  lcd.c  lcd.h  led.c  led.h  sd.c  sd.h
firmware/hmi/main/server/: server.c  server.h
firmware/hmi/main/ui/: index.c  index.h  menu.c  menu.h  stream.c  stream.h
firmware/load/: .mxproject  .stm32env  CMakeLists.txt  STM32Make.make  load.ioc  openocd.cfg  requirements.txt  stm32f1x.cfg  tunner.py  tunner_plot.ipynb
firmware/load/Lib/Parser/: CMakeLists.txt
firmware/load/Lib/Parser/src/: message.h  parser.c  parser.h
firmware/poc_https_server/: CMakeLists.txt  sdkconfig  sdkconfig.old
hardware/hmi/: display.kicad_sch  esp32.kicad_sch  fp-lib-table  main.kicad_pcb  main.kicad_pro  main.kicad_sch  sym-lib-table
hardware/load/: analog.kicad_sch  driver.kicad_sch  fp-lib-table  load.kicad_dru  load.kicad_pcb  load.kicad_pro  load.kicad_sch  power.kicad_sch  stm32.kicad_sch  supplies.kicad_sch  sym-lib-table
hardware/main/: esp32.kicad_sch  (+4 more)
sdk/: load_sdk.py  main.py  ui.py
simulations/: .gitignore
(+63 files in other folders)
